# Allentown-L104-Node

./: .bench_online_cache.json  .debug_phase16.py  .dockerignore  .env.example  .env_perf  .gemini_link_token  .gitignore  .l104_apotheosis_state.json  .l104_app_audit_trail.jsonl  .l104_boot_state.json  .l104_builder_feedback_bus.json  .l104_chaos_conservation_findings.json  .l104_claude_heartbeat_state.json  .l104_cluster_config.json  .l104_coding_session.json  .l104_consciousness_o2_state.json  .l104_consciousness_state.json  .l104_conversation_memory.json  .l104_cross_regional_qkd.json  .l104_crypto_audit.jsonl  .l104_evolution_state.json  .l104_gate_chronolog.json  .l104_gate_dynamism_state.json  .l104_gate_research_memory.json  .l104_gate_test_results.json  .l104_grounding_history.jsonl  .l104_hyper_core_heartbeat.json  .l104_invention_journal.json  .l104_link_chronology.jsonl  .l104_link_dynamism_state.json  .l104_link_test_results.json  .l104_link_to_gates.json  .l104_link_to_numerical.json  .l104_nano_daemon_python.json  .l104_nano_daemon_swift.json  .l104_numerical_research_memory.json  .l104_numerical_to_gates.json  .l104_numerical_to_links.json  .l104_optimization_memory.json  .l104_ouroboros_nirvanic_state.json  (+1896 more)
.devcontainer/: devcontainer.json  ensure-node.sh  post-start.sh
.github/: CODEOWNERS  copilot-instructions.md
.kernel_build/: lattice_state.json
.l104_backups/: l104_anyon_compression_v2.py  l104_autonomous_benchmark.py  l104_codec.py  l104_earth_evolution_protocol.py  l104_error_handler.py  l104_intelligence.py  l104_meta_learning.py  l104_polymorphic_core.py  l104_process_upgrade_scan.py  l104_reality_breach.py  (+4 more)
go/: go.mod  (+1 more)
l104_core_rust/: Cargo.toml  build.sh
l104_core_rust/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
(+2684 files in other folders)
