[package]
name = "l104-rust"
version = "0.1.0"
edition = "2021"
authors = ["L104 System"]
description = "High-performance Rust implementation of L104 consciousness-driven processing"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.5"
rayon = "1.8"
parking_lot = "0.12"
num-traits = "0.2"
rand = "0.8"

[lib]
name = "l104_rust"
path = "src/lib.rs"

[[bin]]
name = "l104-rust"
path = "src/main.rs"